# invenio-pure

./: .ruff.toml  CHANGES.rst  MANIFEST.in  pyproject.toml  run-tests.sh  setup.cfg  setup.py
.github/workflows/: pypi-publish.yml  tests.yml
docs/: Makefile  api.rst  authors.rst  changes.rst  conf.py  configuration.rst  contributing.rst  index.rst  installation.rst  make.bat  usage.rst
invenio_pure/: __init__.py  api.py  cli.py  click_options.py  config.py  converter.py  errors.py  ext.py  jobs.py  proxies.py  synchronizer.py  tasks.py  types.py  utils.py  views.py
invenio_pure/pure/: __init__.py  import_records.py  utils.py
invenio_pure/records/: __init__.py  api.py  config.py  models.py
invenio_pure/services/: __init__.py  config.py  decorators.py  services.py
invenio_rdm_pure/: cli.py  converter.py  synchronizer.py  utils.py  views.py
invenio_rdm_pure/pure/: import_records.py  utils.py
tests/: conftest.py  test_converter.py  test_invenio_pure.py  test_invenio_rdm_pure.py  test_users.py
