[build-system]
requires = ["setuptools", "wheel", "babel>2.8"]
build-backend = "setuptools.build_meta"

[tool.ruff]
exclude = ["docs"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "ANN101", "ANN102",
  "D203", "D211", "D212", "D213",
  "FA",
  "FIX",
  "INP001",
  "PERF203",
  "PLR0913",
  "S101",
  "SIM117",
  "TD",
  "TID252",
  "TRY400",
  "UP009",
]


[tool.mypy]
exclude = [
  "docs",
]
ignore_missing_imports = true
