[build-system]
requires = ["setuptools", "wheel", "babel>2.8"]
build-backend = "setuptools.build_meta"

[tool.ruff]
exclude = ["docs"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "A005",
  "D203", "D211", "D212", "D213",
  "FA",
  "FIX",
  "INP001",
  "PERF203",
  "PLR0913",
  "RUF022",
  "S101",
  "SIM117",
  "TC006",
  "TD",
  "TID252",
  "TRY400",
  "UP009",
]


[tool.mypy]
exclude = [
  "docs",
]
ignore_missing_imports = true
disallow_untyped_decorators = false
strict = true
