# -*- coding: utf-8 -*-
#
# Copyright (C) 2020-2022 Technische Universität Graz
#
# invenio-pure is free software; you can redistribute it and/or modify it
# under the terms of the MIT License; see LICENSE file for more details.


[metadata]
name = invenio-pure
version = attr: invenio_pure.__version__
description = "Provides API for PURE."
long_description = file: README.rst, CHANGES.rst
license = MIT
author = Graz University of Technology.
author_email = info@inveniosoftware.org
platforms = any
url = https://github.com/tu-graz-library/invenio-pure
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
include_package_data = True
packages = find:
python_requires = >=3.8
zip_safe = False
install_requires =
    click>=7.0.0
    invenio-i18n>=2.0.0
    requests>=2.0.0

[options.extras_require]
tests =
    pytest-black>=0.3.0
    pytest-invenio>=1.4.3
    invenio-search[opensearch2]>=2.1.0
    pytest-pylint>=0.18.0
    pytest-bandit>=0.6.1
    Sphinx>=4.5

[options.entry_points]
flask.commands =
    pure = invenio_pure.cli:pure
invenio_base.apps =
    invenio_pure = invenio_pure:InvenioPure
invenio_base.blueprints =
    invenio_pure = invenio_pure.views:blueprint
invenio_i18n.translations =
    messages = invenio_pure
invenio_config.module =
    invenio_pure = invenio_pure.config
invenio_celery.tasks =
    invenio_pure = invenio_pure.tasks

[aliases]
test = pytest

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[pydocstyle]
add_ignore = D401

[compile_catalog]
directory = invenio_pure/translations/

[extract_messages]
copyright_holder = Technische Universität Graz
msgid_bugs_address = info@fair-data-austria.com
mapping-file = babel.ini
output-file = invenio_pure/translations/messages.pot
add-comments = NOTE

[init_catalog]
input-file = invenio_pure/translations/messages.pot
output-dir = invenio_pure/translations/

[update_catalog]
input-file = invenio_pure/translations/messages.pot
output-dir = invenio_pure/translations/

[tool:isort]
profile = black

[pycodestyle]
ignore = E203,E501,W503,E231

[check-manifest]
ignore =
    *-requirements.txt

[tool:pytest]
addopts = --isort --pylint --pydocstyle --black --doctest-glob="*.rst" --doctest-modules --cov=invenio_pure --cov-report=term-missing
testpaths = tests invenio_pure
live_server_scope = module
