# -*- coding: utf-8 -*-
#
# Copyright (C) 2020-2022 Technische Universität Graz
#
# invenio-pure is free software; you can redistribute it and/or modify it
# under the terms of the MIT License; see LICENSE file for more details.


[metadata]
name = invenio-pure
version = attr: invenio_pure.__version__
description = "Provides API for PURE."
long_description = file: README.rst, CHANGES.rst
license = MIT
author = Graz University of Technology.
author_email = info@inveniosoftware.org
platforms = any
url = https://github.com/tu-graz-library/invenio-pure
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
include_package_data = True
packages = find:
python_requires = >=3.8
zip_safe = False
install_requires =
    click>=7.0.0
    click-params>=0.4.0
    invenio-i18n>=1.3.3
    invenio-celery>=1.2.5
    invenio-mail>=1.0.2
    requests>=2.0.0

[options.extras_require]
tests =
    pytest-black>=0.3.0
    pytest-invenio>=1.4.3
    invenio-search[opensearch2]>=2.1.0
    ruff>=0.0.263
    Sphinx>=4.5

[options.entry_points]
flask.commands =
    pure = invenio_pure.cli:pure
invenio_base.apps =
    invenio_pure = invenio_pure:InvenioPure
invenio_i18n.translations =
    messages = invenio_pure
invenio_celery.tasks =
    invenio_pure = invenio_pure.tasks

[aliases]
test = pytest

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[pydocstyle]
add_ignore = D401

[tool:isort]
profile = black

[check-manifest]
ignore =
    *-requirements.txt

[tool:pytest]
addopts = --black --doctest-glob="*.rst" --doctest-modules --cov=invenio_pure --cov-report=term-missing
testpaths = tests invenio_pure
live_server_scope = module
