# -*- coding: utf-8 -*-
#
# Copyright (C) 2020-2024 Technische Universität Graz
# Copyright (C) 2025 Graz University of Technology.
#
# invenio-pure is free software; you can redistribute it and/or modify it
# under the terms of the MIT License; see LICENSE file for more details.


[metadata]
name = invenio-pure
version = attr: invenio_pure.__version__
description = "Provides API for PURE."
long_description = file: README.rst, CHANGES.rst
license = MIT
author = Graz University of Technology.
author_email = info@inveniosoftware.org
platforms = any
url = https://github.com/tu-graz-library/invenio-pure
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13

[options]
include_package_data = True
packages = find:
python_requires = >=3.12
zip_safe = False
install_requires =
    click>=7.0.0
    click-params>=0.4.0
    invenio-access>=2.0.0
    invenio-accounts>=3.0.0
    invenio-celery>=1.2.5
    invenio-jobs>=3.0.0
    requests>=2.0.0

[options.extras_require]
tests =
    pytest-black-ng>=0.4.0
    pytest-invenio>=1.4.3
    invenio-search[opensearch2]>=2.1.0
    ruff>=0.5.4
    Sphinx>=4.5

[options.entry_points]
flask.commands =
    pure = invenio_pure.cli:pure
invenio_base.apps =
    invenio_pure = invenio_pure:InvenioPure
invenio_celery.tasks =
    invenio_pure = invenio_pure.tasks
invenio_jobs.jobs =
    pure_import = invenio_pure.jobs:PureImportJob

[aliases]
test = pytest

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[tool:isort]
profile = black

[tool:pytest]
addopts = --black --doctest-glob="*.rst" --doctest-modules --cov=invenio_pure --cov-report=term-missing
testpaths = tests invenio_pure
